--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
-streamlit>=1.31.1
-sqlalchemy>=2.0.27
+# Authentification et sécurité - versions fixées pour éviter les problèmes de compatibilité
+bcrypt==4.0.1
+passlib==1.7.4
+cryptography>=41.0.7
+PyJWT>=2.8.0
 python-jose>=3.3.0
-passlib>=1.7.4
-python-dotenv>=1.0.0
+
+# Interface utilisateur
+streamlit>=1.31.1
+
+# Base de données
+sqlalchemy>=2.0.27
+
+# Manipulation de données et visualisations
 pandas>=2.1.4
 matplotlib>=3.8.2
-cryptography>=41.0.7
-bcrypt>=4.1.2
-PyJWT>=2.8.0
+
+# API financière
 yfinance>=0.2.3
+
+# Autres
+python-dotenv>=1.0.0
+requests>=2.31.0
